multiple element overflows the month row in case of page resize. so we use overflow auto for that.and show more issue is resolved by setting defaultDate value as today

--- a/src/view/shared/components/calendar/components/Calendar/styles.css
+++ b/src/view/shared/components/calendar/components/Calendar/styles.css
@@ -119,6 +119,23 @@ event-modal-time .weekCalendar__overlay {
 .ant-modal-footer {
   background-color: white !important;
 }
+/* month*/
+.rbc-month-row {
+  overflow: auto !important;
+}
+.rbc-month-row::-webkit-scrollbar {
+  width: 0px;
+}
+
+.rbc-month-row::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px #343f57;
+}
+
+.rbc-month-row::-webkit-scrollbar-thumb {
+  background-color: #343f57;
+  outline: none;
+}
+/*week*/
 
 .rbc-event {
   background: transparent !important;
